fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -298,9 +298,8 @@ body {
                         display: -ms-flexbox;
                         display: flex;
                         outline: none;
-                        width: 128pc !important;
                         min-height: 24vh;
-                        // max-height: 51vh;
+                        max-height: 51vh;
                         img {
                             max-width: 100%;
                             max-height: 100%;
